--- a/ShapesAndroid/app/src/main/res/values/strings.xml
+++ b/ShapesAndroid/app/src/main/res/values/strings.xml
@@ -1,28 +1,31 @@
 <resources>
-    <string name="app_name">Shapes</string>
-    <string name="title_home">Home</string>
-    <string name="title_explore">Explore</string>
-    <string name="title_saved">Saved</string>
-    <string name="title_people">People</string>
-    <string name="title_add_post">Post</string>
-    <string name="title_profile">Profile</string>
-    <string name="enter_your_post_here">Enter text here</string>
-    <string name="add_post">Create Post</string>
-    <string name="liked">Liked</string>
-    <string name="settings">Settings</string>
-    <string name="logout">Logout</string>
-    <string name="sign_up">Sign Up</string>
-    <string name="password">Password</string>
-    <string name="email">Email</string>
-    <string name="username">Username</string>
-    <string name="name">Name</string>
-    <string name="app_logo">App logo</string>
-    <string name="log_in">Log in</string>
-    <string name="image">Image</string>
-    <string name="upload">Upload</string>
-    <string name="Logout_message">Are you sure you want to logout?</string>
-    <string name="theme">Theme</string>
-    <string name="filter">Filter</string>
-    <string name="new_account">Don\'t have account go to Sign in.</string>
     <string name="account">Already have a account go to Log in.</string>
+    <string name="add_post">Create Post</string>
+    <string name="app_logo">App logo</string>
+    <string name="app_name">Shapes</string>
+    <string name="back">Back</string>
+    <string name="email">Email</string>
+    <string name="enter_your_post_here">Enter text here</string>
+    <string name="filter">Filter</string>
+    <string name="image">Image</string>
+    <string name="liked">Liked</string>
+    <string name="log_in">Log in</string>
+    <string name="logout">Logout</string>
+    <string name="Logout_message">Are you sure you want to logout?</string>
+    <string name="name">Name</string>
+    <string name="new_account">Don\'t have account go to Sign in.</string>
+    <string name="password">Password</string>
+    <string name="people">People</string>
+    <string name="sign_up">Sign Up</string>
+    <string name="settings">Settings</string>
+    <string name="theme">Theme</string>
+    <string name="title_add_post">Post</string>
+    <string name="title_explore">Explore</string>
+    <string name="title_home">Home</string>
+    <string name="title_people">People</string>
+    <string name="title_profile">Profile</string>
+    <string name="title_saved">Saved</string>
+    <string name="upload">Upload</string>
+    <string name="username">Username</string>
+
 </resources>
